# tauric

./: .gitignore  BUILDING.md  Cargo.toml  README.md  package.json
.github/workflows/: publish-libtauri.yml  publish-pypi.yml
bindings/go/: go.mod  main.go  main_windows.go
bindings/node/: index.ts  package-lock.json  package.json
bindings/python/: main.py  tauric.py
c-api/: Cargo.toml  build.rs  tauri.conf.json
c-api/capabilities/: default.json
c-api/src/: lib.rs  main.rs
examples/: main.py
libtauri/: Cargo.toml  tauri.conf.json
libtauri/src/: lib.rs  main.rs
libtauric/: Cargo.toml  tauri.conf.json
libtauric/src/: lib.rs  main.rs
tauri.js/: .gitignore
tauric/: Cargo.toml  build.rs  bun.lockb
tauric/capabilities/: default.json
tauric/src/: lib.rs  main.rs
taurigo/: main.go
tauripy/: .gitignore  README.md  hatch_build.py  pyproject.toml
tauripy/src/tauripy/: __init__.py
