[package]
name = "c-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "tauric"

[build-dependencies]
tauri-build = { version = "=2.0.0-beta.19", features = [] }

[dependencies]
ctrlc = "3.4.4"
serde_json = "1.0.120"
tauri = { version = "=2.0.0-beta.24", features = [] }
