[package]
name = "c-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
path = "src/lib.rs"
name = "tauric"

[[bin]]
name = "main"
path = "src/main.rs"


[build-dependencies]
tauri-build = { version = "=2.0.0-beta.19", features = [] }
cbindgen = "=0.26.0"

[dependencies]
ctrlc = "3.4.4"
serde_json = "1.0.120"
tauri = { version = "=2.0.0-beta.24", features = [] }
tokio = { version = "1.39.1", features = ["fs"] }
