[project]
name = "tauripy"
version = "0.1.0-beta.7"
description = "Create tauri desktop app in Python"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Repository = "https://github.com/thewh1teagle/tauric"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.hooks.custom]